# Shitcoins

./: .env.example  .gitignore  README.md  checkHolderTransfers.py  linting.cfg  linting.sh  main.py  mainOld.py  my_database.dump  pyproject.toml  scrape-pumpfun.py  scrapePumpFun.py  session_name.session  setup.sh  solscannerScrape.py  telegramAlert.py
database/: Dockerfile  schema.sql
old/: mainOld.py  scrapePumpFun copy.py  scrapePumpFunOld.py  solscannerScrape copy.py
shitcoins/: analyse_alerts.py  check_holder_transfers.py  coin_data.py  get_holders.py  main.py  mint_address_fetcher.py  scrape_pump_fun.py  telegram_alert.py
shitcoins/database/table/: exchange_repository.py  table.py  wallet_repository.py
shitcoins/model/: coin_data.py  dex_metric.py  exchange.py  first_buy_statistics.py  holder.py  market_info.py
shitcoins/mp/: lock_counter.py  multi_process_rate_limiter.py
shitcoins/sol/: solana_client.py
shitcoins/solana/: solana_client.py
shitcoins/util/: time_util.py
tests/: bot_tester.py  test_check_holder_transfers.py  test_get_holders.py  test_mint_address_fetcher.py
tests/mp/: test_multi_process_rate_limiter.py
tests/sol/: test_solana_client.py
tests/solana/: test_solana_client.py
