[build-system]
requires = [
    "setuptools>=69.0.0",
    "coverage>=4.5.0",
    "entrypoints>=0.3",
    "flake8>=3.7.0",
    "mockito>=1.3.0",
    "pycodestyle>=2.5.0",
    "pyflakes>=2.1.0",
    "unittest-xml-reporting>=2.5.0",
    "wheel>=0.42.0"
]
build-backend = "setuptools.build_meta"
[project]
name = "shitcoins"
version = "0.0.1"
dependencies = [
    "telethon>=1.36.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.2",
    ""
]

[project.optional-dependencies]
lint = [
    "flake8>=3.7.0"
]

[tool.setuptools]
packages = ["shitcoins",]